fixing spilling out footer urls

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -272,6 +272,7 @@ input[type='button']:active, input[type='submit']:active, button:active, .button
 
 footer {
   color $light-text-color
+  word-break break-all
 }
 
 .type {
